--- a/src/app/report-table/report-table.component.html
+++ b/src/app/report-table/report-table.component.html
@@ -1,13 +1,15 @@
 <div class="scenario-name">
   <h2>{{ scenarioName }} testine {{ runDate ? (runDate | date:'yyyy-MM-dd') : 'N/A' }} tarihinde başlandı.</h2>
+
 </div>
 
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
   <mat-tab label="Tablo">
     <div class="table-container">
+
       <app-generic-table [columns]="columns" [dataSource]="dataSource" (rowClick)="onRowClick($event)">
         <ng-template tableColumnTemplate="action" let-element let-i="index">
-          <mat-radio-group [(ngModel)]="element.data.success_criteria" (ngModelChange)="onCriteriaChange(element, $event)">
+          <mat-radio-group [(ngModel)]="element.data.step_criteria" (ngModelChange)="onCriteriaChange(element, $event)">
             <mat-radio-button value="geçti">Geçti</mat-radio-button>
             <mat-radio-button value="kaldı">Kaldı</mat-radio-button>
             <mat-radio-button value="Test Edilmedi">Test Edilmedi</mat-radio-button>
