--- a/src/app/user-permissions/user-permissions.component.html
+++ b/src/app/user-permissions/user-permissions.component.html
@@ -8,7 +8,6 @@
   <mat-form-field appearance="outline" class="full-width">
     <mat-label>Status</mat-label>
     <mat-select formControlName="status" (selectionChange)="onStatusChange()">
-      <mat-option value="superuser" *ngIf="currentUser.is_superuser">Superuser</mat-option>
       <mat-option value="staff">Staff</mat-option>
       <mat-option value="active">Active</mat-option>
     </mat-select>
@@ -18,29 +17,29 @@
     <div class="permission-item">
       <span>Can Edit User:</span>
       <mat-radio-group [formControl]="permissionsForm.controls['canEditUser']">
-        <mat-radio-button [value]="true">Yes</mat-radio-button>
-        <mat-radio-button [value]="false">No</mat-radio-button>
+        <mat-radio-button [value]="true" disabled>Yes</mat-radio-button>
+        <mat-radio-button [value]="false" disabled>No</mat-radio-button>
       </mat-radio-group>
     </div>
     <div class="permission-item">
       <span>Can Delete User:</span>
       <mat-radio-group [formControl]="permissionsForm.controls['canDeleteUser']">
-        <mat-radio-button [value]="true">Yes</mat-radio-button>
-        <mat-radio-button [value]="false">No</mat-radio-button>
+        <mat-radio-button [value]="true" disabled>Yes</mat-radio-button>
+        <mat-radio-button [value]="false" disabled>No</mat-radio-button>
       </mat-radio-group>
     </div>
     <div class="permission-item">
       <span>Can Edit Scenario:</span>
       <mat-radio-group [formControl]="permissionsForm.controls['canEditScenario']">
-        <mat-radio-button [value]="true">Yes</mat-radio-button>
-        <mat-radio-button [value]="false">No</mat-radio-button>
+        <mat-radio-button [value]="true" disabled>Yes</mat-radio-button>
+        <mat-radio-button [value]="false" disabled>No</mat-radio-button>
       </mat-radio-group>
     </div>
     <div class="permission-item">
       <span>Can Delete Scenario:</span>
       <mat-radio-group [formControl]="permissionsForm.controls['canDeleteScenario']">
-        <mat-radio-button [value]="true">Yes</mat-radio-button>
-        <mat-radio-button [value]="false">No</mat-radio-button>
+        <mat-radio-button [value]="true" disabled>Yes</mat-radio-button>
+        <mat-radio-button [value]="false" disabled>No</mat-radio-button>
       </mat-radio-group>
     </div>
   </div>
