--- a/src/app/generic-table/generic-table.component.html
+++ b/src/app/generic-table/generic-table.component.html
@@ -1,21 +1,41 @@
-<div>
-    <div *ngIf="showExportButton">
-    <button mat-raised-button color="accent" (click)="exportToPDF()">Export to PDF</button>
+<div class="button-container">
+  <div *ngIf="showExportButton">
+    <button mat-raised-button color="accent" (click)="exportToPDF()"> <mat-icon>save_alt</mat-icon> Export to PDF</button>
   </div>
 
   <div *ngIf="showRefreshButton">
-    <button mat-raised-button color="accent" (click)="refreshTable()">Refresh</button>
+    <button mat-raised-button color="accent" (click)="refreshTable()"> <mat-icon>refresh</mat-icon> Refresh </button>
   </div>
 </div>
 
-<div *ngIf="showAddDataForm">
-  <mat-form-field appearance="fill" *ngFor="let column of columns">
-    <mat-label>{{ column.header }}</mat-label>
-    <input matInput [(ngModel)]="newData[column.key]" placeholder="{{ column.header }}">
+
+<div *ngIf="showFilter">
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="addData()">Add</button>
 </div>
 
+<div *ngIf="showExpand">
+  <ng-container matColumnDef="expand">
+    <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
+        <mat-icon>{{ expandedElement === element ? 'keyboard_arrow_up' : 'keyboard_arrow_down' }}</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+</div>
+
+<div *ngIf="showAddDataForm">
+  <ng-container *ngFor="let column of columns">
+    <mat-form-field appearance="fill" *ngIf="column.type !== ColumnType.CUSTOM ">
+      <mat-label>{{ column.header }}</mat-label>
+      <input matInput [(ngModel)]="newData[column.key]" placeholder="{{ column.header }}">
+    </mat-form-field>
+  </ng-container>
+  <button mat-raised-button color="primary" (click)="addData()">Add</button>
+</div>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   <ng-container *ngFor="let column of columns; let i = index" [matColumnDef]="column.key">
