--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -2,12 +2,14 @@ html, body, mat-sidenav-container, mat-sidenav, .example-sidenav-content {
   height: 100%;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .example-container {
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.spacer {
+  flex: 1 1 auto;
 }
 
 .example-sidenav {
@@ -16,16 +18,14 @@ html, body, mat-sidenav-container, mat-sidenav, .example-sidenav-content {
   background-color: #cdd6da;
   color: #08213a;
   border-radius: 0;
-
 }
 
 .example-sidenav-content {
-  padding: 16px;
+  padding-left: 100px;
+  padding-top: 40px;
   height: 100%;
   overflow: auto;
   display: flex;
-  justify-content: center;
-
 }
 
 .mat-toolbar {
@@ -37,50 +37,29 @@ html, body, mat-sidenav-container, mat-sidenav, .example-sidenav-content {
 .mat-nav-list .parent {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .mat-nav-list .parent mat-icon:first-child {
   margin-right: 8px;
 }
 
-.rotated {
-  transform: rotate(180deg);
-}
-
 .full-width {
   width: 100%;
+  margin-right: 60px;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
 }
 
 .submenu {
-  overflow-y: hidden;
-  transition: transform 300ms ease;
-  transform: scaleY(0);
-  transform-origin: top;
   padding-left: 30px;
 }
-.submenu.expanded {
-  transform: scaleY(1);
-}
-table {
-  width: 100%;
-}
+
 .menu-button {
   transition: 300ms ease-in-out;
-  transform: rotate(0deg);
-}
-.menu-button.rotated {
-  transform: rotate(180deg);
-}
-.example-sidenav .mat-nav-list .mat-list-item mat-icon {
-  margin-right: 20px; /* İkon ve metin arasına boşluk ekler */
-}
-.mat-nav-list .mat-list-item {
-  color: inherit; /* İç metin renginin sidenav ile uyumlu olmasını sağlar */
-  display: flex;
-  align-items: center; /* İkon ve metni aynı hizaya getirir */
+  margin-right: 20px;
 }
 
-
-
-
+.mat-nav-list a.mat-list-item {
+  padding-left: 60px; /* Bu satır menü öğelerinin girintisini ayarlar */
+}
