--- a/src/app/scenario-stepper/scenario-stepper.component.html
+++ b/src/app/scenario-stepper/scenario-stepper.component.html
@@ -1,23 +1,30 @@
 <mat-card class="stepper-card">
   <h2>{{ scenario.name }}</h2>
-  <h3>Steps</h3>
   <div class="stepper-table-container">
     <table mat-table [dataSource]="paginatedSteps" class="mat-elevation-z8 custom-table">
       <ng-container matColumnDef="stepNumber">
         <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 10%;">Step #</th>
         <td mat-cell *matCellDef="let step; let i = index">{{ i + 1 + (pageIndex * pageSize) }}</td>
       </ng-container>
-      <ng-container matColumnDef="stepName">
-        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 30%;">Step Name</th>
-        <td mat-cell *matCellDef="let step">{{ step.step_name }}</td>
+      <ng-container matColumnDef="vtdMaddeNo">
+        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 10%;">VTD Madde No</th>
+        <td mat-cell *matCellDef="let step">{{ step.vtd_madde_no }}</td>
       </ng-container>
-      <ng-container matColumnDef="stepProcedure">
-        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 30%;">Step Procedure</th>
-        <td mat-cell *matCellDef="let step">{{ step.step_procedure }}</td>
+      <ng-container matColumnDef="testAdimlari">
+        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 20%;">Test Adımları</th>
+        <td mat-cell *matCellDef="let step">{{ step.testAdimlari }}</td>
       </ng-container>
-      <ng-container matColumnDef="stepCriteria">
-        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 20%;">Step Criteria</th>
-        <td mat-cell *matCellDef="let step">{{ step.step_criteria }}</td>
+      <ng-container matColumnDef="kabulKriteri">
+        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 20%;">Kabul Kriteri</th>
+        <td mat-cell *matCellDef="let step">{{ step.kabulKriteri }}</td>
+      </ng-container>
+      <ng-container matColumnDef="durum">
+        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 10%;">Durum</th>
+        <td mat-cell *matCellDef="let step">{{ step.durum }}</td>
+      </ng-container>
+      <ng-container matColumnDef="yorum">
+        <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 10%;">Yorum</th>
+        <td mat-cell *matCellDef="let step">{{ step.yorum }}</td>
       </ng-container>
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="header-cell" style="width: 10%;">Actions</th>
@@ -27,29 +34,13 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['stepNumber', 'stepName', 'stepProcedure', 'stepCriteria', 'actions']" class="sticky-header"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['stepNumber', 'stepName', 'stepProcedure', 'stepCriteria', 'actions'];"></tr>
+      <tr mat-header-row *matHeaderRowDef="['stepNumber', 'vtdMaddeNo', 'testAdimlari', 'kabulKriteri', 'durum', 'yorum', 'actions']" class="sticky-header"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['stepNumber', 'vtdMaddeNo', 'testAdimlari', 'kabulKriteri', 'durum', 'yorum', 'actions'];"></tr>
     </table>
   </div>
   <mat-paginator [length]="steps.length" [pageSize]="pageSize" (page)="handlePageEvent($event)" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  <h3>Add/Edit Step</h3>
-  <form [formGroup]="stepForm" class="stepper-form">
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Step Name</mat-label>
-      <input matInput formControlName="step_name" required>
-    </mat-form-field>
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Step Procedure</mat-label>
-      <input matInput formControlName="step_procedure" required>
-    </mat-form-field>
-    <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Step Criteria</mat-label>
-      <input matInput formControlName="step_criteria" required>
-    </mat-form-field>
-  </form>
-
   <div class="stepper-buttons">
-    <button mat-raised-button color="primary" (click)="addStep()">Add/Save Step</button>
-    <button mat-button color="warn" (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" (click)="openStepDialog()">Add Step</button>
+    <button mat-raised-button color="warn" (click)="onCancel()">Cancel</button>
   </div>
 </mat-card>
