--- a/src/app/test-case-table/test-case-table.component.html
+++ b/src/app/test-case-table/test-case-table.component.html
@@ -1,1 +1,24 @@
-<p>test-case-table works!</p>
+<input type="file" (change)="onFileChange($event)" />
+<select *ngIf="sheetNames.length > 0" (change)="onSheetChange($event)">
+  <option *ngFor="let name of sheetNames" [value]="name">{{name}}</option>
+</select>
+<table *ngIf="dataSource.data.length > 0" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="B">
+    <th mat-header-cell *matHeaderCellDef> B </th>
+    <td mat-cell *matCellDef="let element"> {{element.B}} </td>
+  </ng-container>
+  <ng-container matColumnDef="C">
+    <th mat-header-cell *matHeaderCellDef> C </th>
+    <td mat-cell *matCellDef="let element"> {{element.C}} </td>
+  </ng-container>
+  <ng-container matColumnDef="D">
+    <th mat-header-cell *matHeaderCellDef> D </th>
+    <td mat-cell *matCellDef="let element"> {{element.D}} </td>
+  </ng-container>
+  <ng-container matColumnDef="rowNumber">
+    <th mat-header-cell *matHeaderCellDef> Satır No </th>
+    <td mat-cell *matCellDef="let element"> {{element.rowNumber}} </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
