--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav class="example-sidenav" mode="side" [opened]="true">
+  <mat-sidenav #sidenav class="example-sidenav" mode="side" [(opened)]="isExpanded">
     <mat-nav-list>
       <mat-list-item class="parent">
         <mat-icon mat-list-icon>home</mat-icon>
