--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+  font-family: 'Roboto-Regular';
+  src: url(app/assets/Roboto-Regular.ttf) format('truetype');
+}
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: "Roboto-Regular", "Helvetica Neue", sans-serif; }
