--- a/src/app/generic-table/generic-table.component.html
+++ b/src/app/generic-table/generic-table.component.html
@@ -38,17 +38,6 @@
   </mat-form-field>
 </div>
 
-<div *ngIf="showExpand">
-  <ng-container matColumnDef="expand">
-    <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-icon-button aria-label="expand row" (click)="expandedElement = expandedElement === element ? null : element; $event.stopPropagation()">
-        <mat-icon>{{ expandedElement === element ? 'keyboard_arrow_up' : 'keyboard_arrow_down' }}</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-</div>
-
 <div *ngIf="showAddDataForm">
   <ng-container *ngFor="let column of columns">
     <mat-form-field appearance="fill" *ngIf="column.type !== ColumnType.CUSTOM">
@@ -59,7 +48,8 @@
   <button mat-raised-button color="primary" (click)="addData()">Add</button>
 </div>
 
-<table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows class="mat-elevation-z8">
+
+<table mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z8">
   <ng-container *ngFor="let column of columns; let i = index" [matColumnDef]="column.key">
     <th mat-header-cell *matHeaderCellDef> {{ column.header }} </th>
     <td mat-cell *matCellDef="let element" (click)="onRowClick(element)" [ngClass]="getStateClass(element.data[column.key])" class="hover">
@@ -81,25 +71,11 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumnKeys.length">
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="example-element-description">
-          <!-- Detay içeriği buraya -->
-          <p>ssssss</p>
-        </div>
-      </div>
-    </td>
-  </ng-container>
+
 
   <tr mat-header-row *matHeaderRowDef="displayedColumnKeys"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnKeys"
-      class="example-element-row"
-      [class.example-expanded-row]="expandedElement === row"
-      (click)="expandedElement = expandedElement === row ? null : row">
+  <tr mat-row *matRowDef="let row; columns: displayedColumnKeys">   
   </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
 
 
